Fix console rendering on Safari; closes #4189

--- a/resources/scripts/components/server/console/style.module.css
+++ b/resources/scripts/components/server/console/style.module.css
@@ -19,7 +19,7 @@
 }
 
 .terminal {
-    @apply relative h-full flex flex-col;
+    @apply flex flex-col w-full;
 
     & .overflows_container {
         @apply -ml-4 sm:ml-0;
